# prefect-meltano

./: README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: test.yml
prefect_meltano/: sink_wrapper.py  tap_wrapper.py  utils.py
tests/: leads.csv  test_integration_flow.py  test_sink_wrapper.py  test_tap_wrapper.py
