[project]
name = "prefect-meltano"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anyio>=4.10.0",
    "prefect==3.1.13",
    "singer-sdk>=0.48.1",
]

[dependency-groups]
dev = [
    "meltanolabs-target-csv",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
    "tap-csv"
]

[tool.uv.sources]
tap-csv = { git = "https://github.com/MeltanoLabs/tap-csv.git" }
meltanolabs-target-csv = { git = "https://github.com/MeltanoLabs/target-csv.git" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
